--- a/action.yml
+++ b/action.yml
@@ -3,6 +3,9 @@ name: 'docker test'
 author: 'triptixx'
 description: 'A Action CI plugin for start and test build Docker images'
 inputs:
+  verbose:
+    description: 'print curl output and running commands'
+    default: false
   repo:
     description: 'tag for the image to run and test'
     required: true
